🎨 style(job-page): add dangerouslySetInnerHTML to fix spacing and formatted text

--- a/src/styles/SingleJobPage.scss
+++ b/src/styles/SingleJobPage.scss
@@ -6,7 +6,4 @@
   h2 {
     margin: 0;
   }
-  p {
-    margin: 0;
-  }
 }
